<resources>
    <string name="app_name">Slide Rule</string>
    <string name="moves">Moves:</string>
    <string name="restart">Restart</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="levelComplete">Level Complete!</string>
    <string name="level">LEVEL</string>


    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>


    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
</resources>
