<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miles.myapplication.ChooseLevel"
    android:id="@+id/main_choose">

    <GridLayout
        android:id="@+id/level_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="4"
        app:layout_constraintLeft_toLeftOf="@id/main_choose"
        app:layout_constraintTop_toTopOf="@id/main_choose">

        <ImageView
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/level1"
            android:tag="@integer/int1"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/level2"
            android:tag="@integer/int2"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/level3"
            android:tag="@integer/int3"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="0"
            android:layout_column="3"
            android:id="@+id/level4"
            android:tag="@integer/int4"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/level5"
            android:tag="@integer/int5"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/level6"
            android:tag="@integer/int6"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="1"
            android:layout_column="2"
            android:id="@+id/level7"
            android:tag="@integer/int7"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="1"
            android:layout_column="3"
            android:id="@+id/level8"
            android:tag="@integer/int8"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>

        <ImageView
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/level9"
            android:tag="@integer/int9"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="2"
            android:layout_column="1"
            android:id="@+id/level10"
            android:tag="@integer/int10"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="2"
            android:layout_column="2"
            android:id="@+id/level11"
            android:tag="@integer/int11"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="2"
            android:layout_column="3"
            android:id="@+id/level12"
            android:tag="@integer/int12"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>

        <ImageView
            android:layout_row="3"
            android:layout_column="0"
            android:id="@+id/level13"
            android:tag="@integer/int13"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="3"
            android:layout_column="1"
            android:id="@+id/level14"
            android:tag="@integer/int14"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="3"
            android:layout_column="2"
            android:id="@+id/level15"
            android:tag="@integer/int15"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="3"
            android:layout_column="3"
            android:id="@+id/level16"
            android:tag="@integer/int16"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>

        <ImageView
            android:layout_row="4"
            android:layout_column="0"
            android:id="@+id/level17"
            android:tag="@integer/int17"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="4"
            android:layout_column="1"
            android:id="@+id/level18"
            android:tag="@integer/int18"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="4"
            android:layout_column="2"
            android:id="@+id/level19"
            android:tag="@integer/int19"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>
        <ImageView
            android:layout_row="4"
            android:layout_column="3"
            android:id="@+id/level20"
            android:tag="@integer/int20"
            style="@style/LevelIcon"
            tools:ignore="contentDescription"/>


    </GridLayout>

    <GridLayout
        android:id="@+id/number_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="5"
        app:layout_constraintLeft_toLeftOf="@id/main_choose"
        app:layout_constraintTop_toTopOf="@id/main_choose">

        <TextView
            android:id="@+id/num1"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/one"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num2"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/two"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num3"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/three"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num4"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/four"
            style="@style/LevelNumber"/>

        <TextView
            android:id="@+id/num5"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/five"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num6"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/six"
            style="@style/LevelNumber"/>

        <TextView
            android:id="@+id/num7"
            style="@style/LevelNumber"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/seven" />
        <TextView
            android:id="@+id/num8"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/eight"
            style="@style/LevelNumber"/>

        <TextView
            android:id="@+id/num9"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/nine"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num10"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/ten"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num11"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/eleven"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num12"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/twelve"
            style="@style/LevelNumber"/>

        <TextView
            android:id="@+id/num13"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/thirteen"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num14"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/fourteen"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num15"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/fifteen"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num16"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/sixteen"
            style="@style/LevelNumber"/>

        <TextView
            android:id="@+id/num17"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/seventeen"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num18"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/eighteen"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num19"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/nineteen"
            style="@style/LevelNumber"/>
        <TextView
            android:id="@+id/num20"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/twenty"
            style="@style/LevelNumber"/>

    </GridLayout>

</android.support.constraint.ConstraintLayout>
