<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miles.myapplication.TitleScreen"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintRight_toRightOf="@id/main"
        app:layout_constraintLeft_toLeftOf="@id/main">

        <Button
            android:id="@+id/play"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/play"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>
        <Button
            android:id="@+id/tutorial"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
